# bibfusion

./: .gitignore  CITATION.cff  LICENSE  README.md  build_main_coauthor_edges.py  build_top10_egograph_edges.py  build_top_authors.py  pyproject.toml  requirements.txt  run_main.py
R_code/: template_R.R  verbs.R
all_data_wos_scopus/: All_Affiliation.csv  All_ArticleAuthor.csv  All_AuthorAlias.csv  All_AuthorClusters.csv  All_AuthorConflictsReview.csv  All_Authors.csv  All_Citation.csv  All_Journal.csv  All_Scimagodb.csv  CoauthorEdges.csv  CoauthorEdges_Links.csv  CoauthorNodes.csv
data/: country.csv
docs/: bibfusion_data_dictionary_v1.0.0_combined.md  issue-author-affiliation-mapping.md  pipeline.md
src/: main.py
src/bibfusion/: __init__.py  __main__.py  pipeline.py
src/modules/: __init__.py  add_community_branch.py  add_tos_to_data_excel.py  add_year_and_scimago_info.py  aggregate_sr_and_attach_scimago_ids.py  build_coauthor_edges.py  build_coauthor_network.py  build_user_dataset.py  citation_scopus.py  clean_citation_network.py  combine_journal_mappings.py  consolidate_authors.py  cross_consolidate_all_authors.py  crossref.py  def.py  duplicates.py  enrich_references_with_openalex.py  enrich_scopus_author_data.py  enrich_scopus_ref.py  enrich_scopus_with_openalex_authors.py  enrich_with_scimago.py  enrich_wos_author_data.py  enrich_wos_journals.py  enrich_wos_ref.py  enrich_wos_with_openalex_authors.py  extract_first_author.py  extract_journal.py  extract_title.py  extract_venue.py  fill_author_from_full_names.py  fill_missing_issn_eissn_with_scimago.py  (+35 more)
(+41 files in other folders)
